# prediction-terminal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FEY-REFERENCE-GUIDE.md  README.md  compare_formats.py  test_hmac.py  test_polymarket_order.py
barter-macro/: Cargo.toml
barter-macro/src/: lib.rs
data/: cache.db  trades.db
docs/: ARCHITECTURE.md  Architectural Analysis.md  BRAINLIFT.md  Challenge-Overview.md  DEMO_TOPICS.md  Deep_Research_Feature_Explained.md  PRD-V1.md  PRD-V2.md  embedding-semantic-mapping-plan.md  news-sources-analysis.md
docs/feature-implementation/: candlestick-bug-hunting.md  candlestick-continuity-fix.md  candlestick-plan.md  current-trading-architecture.md  trade-execution-fixes.md  trade-execution-plan-2.md  trade-execution-plan.md  whale-tracking-implementation.md
docs/future-features/: ARBITRAGE_ALERTS.md  CROSS_PLATFORM_MATCHING.md  HOME_PAGE_REALTIME.md  MULTI_OUTCOME_MARKETS.md  MarketUIEnhancements.md  TRADING.md  UNIFIED_SEARCH.md
docs/plans/: plan-inline-citations.md  plan-market-context-for-research.md  plan-trading-focused-research.md
frontend/: package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/fey/: page.tsx
frontend/src/app/markets/: layout.tsx  page.tsx
frontend/src/app/news/: page.tsx
frontend/src/app/portfolio/: layout.tsx  page.tsx
frontend/src/app/research/: page.tsx
frontend/src/app/research/[marketId]/: page.tsx
frontend/src/app/signup/: layout.tsx  page.tsx
frontend/src/components/: exchange-selector.tsx  markets-table.tsx  platform-badge.tsx  platform-filter.tsx  providers.tsx  view-toggle.tsx
frontend/src/components/future/: markets-table.tsx
frontend/src/components/icons/: polymarket-icon.tsx
frontend/src/components/landing/: animated-gradient.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx
frontend/src/components/layout/: navbar.tsx
frontend/src/components/market/: connection-indicator.tsx  event-trade-history.tsx  index.ts  live-trades-table.tsx  market-info-panel.tsx  market-tabs.tsx  multi-outcome-chart.tsx  order-book.tsx  outcome-accordion.tsx  price-chart.tsx  related-markets.tsx  research-button.tsx  research-modal.tsx  trade-execution.tsx  trade-history.tsx
frontend/src/components/market-card/: index.ts  market-card.tsx
frontend/src/components/market/intelligence/: index.ts  intelligence-panel.tsx  sentiment-gauge.tsx
frontend/src/components/market/layout/: collapsible-rail.tsx  index.ts  market-bar.tsx  market-workspace.tsx  multi-outcome-market-bar.tsx  multi-outcome-trading-header.tsx  trading-header.tsx
frontend/src/components/market/orderbook/: imbalance-meter.tsx  index.ts  order-book-v2.tsx
frontend/src/components/market/overview/: historical-analysis-card.tsx  key-stats-grid.tsx  market-insights.tsx  market-summary.tsx  news-feed-card.tsx  outcome-summary-grid.tsx  resolution-strategy-card.tsx
frontend/src/components/market/shared/: outcome-selector.tsx  probability-bar.tsx  sparkline.tsx
frontend/src/components/market/tradeflow/: bubble-timeline.tsx  index.ts  momentum-gauge.tsx  pressure-bar.tsx
frontend/src/components/market/trading/: live-trade-feed.tsx  quick-stats.tsx
frontend/src/components/market/ui/: index.ts  pro-mode-toggle.tsx
frontend/src/components/market/views/: index.ts  overview-view.tsx  (+4 more)
frontend/src/components/markets-grid/: binary-card.tsx  colors.ts  index.ts  markets-grid.tsx  markets-table.tsx  multi-outcome-card.tsx  sports-card.tsx  team-abbrev.ts  utils.ts
frontend/src/components/news/: index.ts  market-news-section.tsx  news-card.tsx  news-feed.tsx
frontend/src/components/research/: inline-citation.tsx  research-chat.tsx  research-document.tsx  research-page.tsx  research-reports.tsx  trading-analysis.tsx  version-history.tsx
frontend/src/components/ui/: animated-number.tsx  sonner.tsx  sparkline.tsx  table.tsx
frontend/src/hooks/: index.ts  use-event-trades-stream.ts  use-market-sentiment.ts  use-market-stream.ts  use-news-stream.ts  use-positions.ts  use-pro-mode.ts  use-research.ts  use-trade-momentum.ts  use-trading-balance.ts  use-websocket.ts
frontend/src/lib/: api.ts  citation-parser.tsx  market-analytics.ts  motion.ts  orderbook-utils.ts  trading-toast.tsx  types.ts
frontend/src/providers/: websocket-provider.tsx
scripts/: generate-embeddings.sh
terminal-api/: Cargo.toml
terminal-api/src/: main.rs
terminal-api/src/routes/: health.rs  markets.rs  mod.rs  news.rs  research.rs  trading.rs  ws.rs
terminal-core/: Cargo.toml
terminal-core/src/: error.rs  lib.rs  market.rs  news.rs  platform.rs  position.rs  websocket.rs
terminal-embedding/: Cargo.toml
terminal-embedding/src/: client.rs  error.rs  lib.rs  similarity.rs  store.rs  types.rs
terminal-kalshi/: Cargo.toml
terminal-kalshi/src/: client.rs  lib.rs  types.rs  websocket.rs
terminal-news/: Cargo.toml
terminal-news/src/: dexscreener.rs  error.rs  exa.rs  firecrawl.rs  google_news.rs  lib.rs  rss_client.rs  types.rs
terminal-news/src/discord/: client.rs  config.rs  engagement.rs  message_converter.rs  mod.rs
terminal-polymarket/: Cargo.toml
terminal-polymarket/examples/: test_ws.rs
terminal-polymarket/src/: client.rs  lib.rs  types.rs  websocket.rs
terminal-research/: Cargo.toml
terminal-research/examples/: test_keys.rs
terminal-research/src/: exa.rs  lib.rs  openai.rs  resolution_source.rs  storage.rs  types.rs
terminal-services/: Cargo.toml
terminal-services/src/: aggregator.rs  candle_service.rs  discord_aggregator.rs  lib.rs  market_cache.rs  market_service.rs  market_stats.rs  news_aggregator.rs  news_analyzer.rs  news_cache.rs  news_service.rs  rate_limiter.rs  research_service.rs  trade_collector.rs  trade_storage.rs
terminal-services/src/websocket/: handler.rs  mod.rs  subscription.rs
terminal-trading/: Cargo.toml
terminal-trading/src/: balance.rs  clob_client.rs  eip712.rs  lib.rs  order.rs  positions.rs  types.rs  wallet.rs
terminal-trading/tests/: test_l1_auth.rs
(+5 files in other folders)
