[package]
name = "terminal-core"
version = "0.1.0"
edition = "2021"
description = "Core types for the Prediction Market Terminal"
authors = ["Amaan"]

[dependencies]
# SerDe
serde = { workspace = true }
serde_json = { workspace = true }

# Data types
rust_decimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
