[package]
name = "terminal-kalshi"
version = "0.1.0"
edition = "2021"
description = "Kalshi integration for the Prediction Market Terminal"
authors = ["Amaan"]

[dependencies]
terminal-core = { workspace = true }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# HTTP
reqwest = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }
url = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }

# Data types
rust_decimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Crypto (for RSA-PSS signing)
rsa = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
# Note: rand 0.8 is required for rsa crate compatibility (rand_core 0.6)
rand = "0.8"
