[package]
name = "terminal-news"
version = "0.1.0"
edition = "2021"
description = "News aggregation via RSS feeds"

[dependencies]
terminal-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
rss = { workspace = true }
atom_syndication = { workspace = true }
quick-xml = { workspace = true }
urlencoding = "2.1"

# Discord Integration (optional)
twilight-gateway = { workspace = true, optional = true }
twilight-http = { workspace = true, optional = true }
twilight-model = { workspace = true, optional = true }
twilight-cache-inmemory = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

[features]
default = []
discord = ["twilight-gateway", "twilight-http", "twilight-model", "twilight-cache-inmemory", "dashmap"]
