[package]
name = "terminal-research"
version = "0.1.0"
edition = "2021"
description = "Deep research agent for prediction market analysis"
authors = ["Amaan"]

[dependencies]
terminal-core = { path = "../terminal-core" }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-openai = { version = "0.31", features = ["chat-completion"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }
aws-sdk-s3 = "1.118"
aws-config = "1.0"
url = "2"
regex = "1"
scraper = "0.20"
