[package]
name = "terminal-services"
version = "0.1.0"
edition = "2021"
description = "Business logic services for the Prediction Market Terminal"
authors = ["Amaan"]

[dependencies]
terminal-core = { workspace = true }
terminal-kalshi = { workspace = true }
terminal-polymarket = { workspace = true }
terminal-news = { workspace = true, features = ["discord"] }
terminal-embedding = { workspace = true }
terminal-research = { path = "../terminal-research" }

# Async
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# WebSocket
tokio-tungstenite = { workspace = true }

# Discord Integration
twilight-gateway = { workspace = true }
twilight-model = { workspace = true }
twilight-cache-inmemory = { workspace = true }

# SerDe
serde = { workspace = true }
serde_json = { workspace = true }

# Data types
rust_decimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true }

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Hashing
md5 = "0.7"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1.39"
