[package]
name = "terminal-trading"
version = "0.1.0"
edition = "2024"
description = "Polymarket trading execution - wallet management, EIP-712 signing, CLOB client"

[dependencies]
# Workspace dependencies
terminal-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }

# Ethereum/EIP-712 signing
alloy = { version = "1.1", features = ["signers", "signer-local", "eips"] }

# Additional
uuid = { version = "1.0", features = ["v4"] }
rand = { version = "0.9" }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = { workspace = true }
